[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Worlds/WorldsScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Dialouge/Dialogue.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/LoadingScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Worlds/world_map.png" type="Texture" id=4]
[ext_resource path="res://Assets/Worlds/world_2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Worlds/world_4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Worlds/world_3.png" type="Texture" id=7]
[ext_resource path="res://Scenes/NavBar.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 176.09, 113.488 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 114.494, 120.334 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 248.11, 87.8281 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 172.891, 98.7708 )

[node name="World" type="Node2D"]
position = Vector2( 1, 2 )
script = ExtResource( 1 )

[node name="Dialogue" parent="." instance=ExtResource( 2 )]
visible = false
margin_top = 45.9495
margin_bottom = 45.9495

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="LoadingScreen" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Bg" type="Sprite" parent="."]
editor/display_folded = true
show_behind_parent = true
position = Vector2( 478.651, 675.24 )
scale = Vector2( 1.01987, 1.5814 )
texture = ExtResource( 4 )

[node name="World2" type="Sprite" parent="Bg"]
modulate = Color( 0.329412, 0.305882, 0.305882, 1 )
position = Vector2( -309.126, -101.007 )
scale = Vector2( 1.09507, 0.997534 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Bg/World2"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bg/World2/Area2D"]
position = Vector2( -20.1965, -1.29996 )
shape = SubResource( 1 )
disabled = true

[node name="World3" type="Sprite" parent="Bg"]
modulate = Color( 0.329412, 0.305882, 0.305882, 1 )
position = Vector2( 20.7406, -44.9977 )
scale = Vector2( 1.19224, 1.10452 )
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="Bg/World3"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bg/World3/Area2D"]
position = Vector2( 5.05923, 3.52191 )
shape = SubResource( 2 )
disabled = true

[node name="World4" type="Sprite" parent="Bg"]
modulate = Color( 0.329412, 0.305882, 0.305882, 1 )
position = Vector2( -151.957, 139.957 )
scale = Vector2( 1.01754, 1.08358 )
texture = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="Bg/World4"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bg/World4/Area2D"]
position = Vector2( -30.0341, 51.2168 )
shape = SubResource( 3 )
disabled = true

[node name="Area2D" type="Area2D" parent="Bg"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bg/Area2D"]
position = Vector2( -27.722, -292.816 )
shape = SubResource( 4 )

[node name="NavBar" parent="." instance=ExtResource( 8 )]
position = Vector2( -0.0702, 194.472 )
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="input_event" from="Bg/World2/Area2D" to="." method="_on_Area2DWorld2_input_event"]
[connection signal="input_event" from="Bg/World3/Area2D" to="." method="_on_Area2DWorld3_input_event"]
[connection signal="input_event" from="Bg/World4/Area2D" to="." method="_on_Area2DWorld4_input_event"]
[connection signal="input_event" from="Bg/Area2D" to="." method="_on_Area2D_input_event"]
